--- a/documentationadvanced/ocp4devex/src/main/asciidoc/openshift-do-command-line.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/openshift-do-command-line.asciidoc
@@ -1,6 +1,6 @@
 == OpenShift DO
 
-Author: Mark Roberts (feedback to mark.roberts@redhat.com)
+Author: Mark Roberts (feedback to mroberts@redhat.com)
 
 === Introduction
 
