--- a/documentationadvanced/ocp4devex/src/main/asciidoc/openshift-pipelines-tekton.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/openshift-pipelines-tekton.asciidoc
@@ -1,6 +1,6 @@
 == OpenShift Pipelines - Tekton
 
-Author: Mark Roberts (feedback to mark.roberts@redhat.com)
+Author: Mark Roberts (feedback to mroberts@redhat.com)
 
 === Introduction
 
