first content for Quay workshop materials

--- a/documentationadvanced/ocp4devex/src/main/asciidoc/index.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/index.asciidoc
@@ -8,5 +8,6 @@ include::camelk.asciidoc[]
 include::openshift-pipelines-tekton.asciidoc[]
 include::camelkocpserverlesseventing.asciidoc[]
 include::camelkocpserverlessservice.asciidoc[]
+include::openshift-and-quay-repository.asciidoc[]
 
 
